--- a/myfinance-web-netcore/myfinance-web-netcore.csproj
+++ b/myfinance-web-netcore/myfinance-web-netcore.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>myfinance_web_netcore</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
